bk_ida/gccida/c1/loop_givs_reduce
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5019:1: error: use of undeclared identifier 'induction_1'
induction_1 *i; // r12 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5019:14: error: use of undeclared identifier 'i'
induction_1 *i; // r12 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5021:1: error: use of undeclared identifier 'induction_1'
induction_1 *j; // rbx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5021:14: error: use of undeclared identifier 'j'
induction_1 *j; // rbx 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5025:7: error: use of undeclared identifier 'i'
for ( i = bl_0->giv; i; i = i->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5025:22: error: use of undeclared identifier 'i'
for ( i = bl_0->giv; i; i = i->next_iv ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5025:25: error: use of undeclared identifier 'i'
for ( i = bl_0->giv; i; i = i->next_iv ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5025:29: error: use of undeclared identifier 'i'
for ( i = bl_0->giv; i; i = i->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5027:21: error: use of undeclared identifier 'i'
if ( ( *( ( _BYTE *)i + 100) & 4) == 0 && !i->same ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5027:44: error: use of undeclared identifier 'i'
if ( ( *( ( _BYTE *)i + 100) & 4) == 0 && !i->same ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5029:7: error: use of undeclared identifier 'i'
if ( !i->new_reg ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5030:1: error: use of undeclared identifier 'i'
i->new_reg = gen_reg_rtx( i->mode); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5030:27: error: use of undeclared identifier 'i'
i->new_reg = gen_reg_rtx( i->mode); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5031:7: error: use of undeclared identifier 'j'
for ( j = bl_0->biv; j; j = j->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5031:22: error: use of undeclared identifier 'j'
for ( j = bl_0->biv; j; j = j->next_iv ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5031:25: error: use of undeclared identifier 'j'
for ( j = bl_0->biv; j; j = j->next_iv ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5031:29: error: use of undeclared identifier 'j'
for ( j = bl_0->biv; j; j = j->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5033:11: error: use of undeclared identifier 'j'
add_val = j->add_val; 
          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/loop.c:5034:12: error: use of undeclared identifier 'i'
mult_val = i->mult_val; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_reduce/src/obj/loop.o] Error 1
